# forecasting-showdown

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: _base.yaml  arima.yaml  ensemble.yaml  gru.yaml  lgbm.yaml  linear.yaml  lstm.yaml  naive.yaml  prophet.yaml  random_forest.yaml  transformer.yaml  xgboost.yaml
data/: energy.csv
docs/: index.html
notebooks/: results.ipynb
reports/: report.md
scripts/: run_all.py
src/: config.py  utils.py
src/data/: features.py  loader.py  splits.py  windowing.py
src/evaluation/: metrics.py  runner.py
src/models/: arima.py  base.py  base_seq.py  ensemble.py  gru.py  lgbm_model.py  linear.py  lstm.py  naive.py  prophet.py  random_forest.py  transformer.py  xgboost_model.py
src/visuals/: __init__.py  charts.py
tests/: test_base_seq.py  test_config.py  test_data_pipeline.py  test_integration.py  test_metrics.py  test_models_week1.py  test_models_week2.py  test_models_week3.py  test_models_week4.py  test_models_week5.py  test_run_all.py  test_runner.py  test_visuals.py  test_windowing.py
